<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<include layout="@layout/title" 
        android:layout_width="fill_parent"
        android:id="@+id/layout_title" 
        android:layout_height="40dp" 
        android:layout_alignParentTop="true"/>
    <LinearLayout android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@drawable/about" 
	    android:layout_centerInParent="true"
	    android:orientation="vertical"
	    android:gravity="center">
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="#00000000"
			android:textColor="#000"
	        android:text="@string/app_name"
	        android:textSize="20sp" />
	
	        <LinearLayout android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:gravity="center"
			    android:layout_marginTop="20dp">
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="#00000000"
			        android:textColor="#000"
			        android:text="@string/version"/>
			    <TextView
			        android:id="@+id/tv_version"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="#00000000"
			        android:textColor="#000"
			        android:text="1.0.0"/>				
			</LinearLayout>
	
	        <LinearLayout android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:gravity="center">
			    <TextView
			        android:textColor="#000"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="#00000000"
			        android:text="@string/design"/>
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="#00000000"
			        android:textColor="#000"
			        android:autoLink="email"
			        android:text="@string/design_content"/>
				
			</LinearLayout>
	
	        <LinearLayout android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:gravity="center">
			    <TextView
			        android:textColor="#000"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="#00000000"
			        android:text="@string/email"/>
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="#00000000"
			        android:textColor="#000"
			        android:autoLink="email"
			        android:text="@string/email_content"/>
				
			</LinearLayout>
	
	        <LinearLayout android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:gravity="center">
			    <TextView
			        android:textColor="#000"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="#00000000"
			        android:text="@string/web"/>
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="#00000000"
			        android:textColor="#000"
			        android:autoLink="web"
			        android:text="@string/web_content"/>
				
			</LinearLayout>
		
	</LinearLayout>
	
</RelativeLayout>